--- a/public/index.html
+++ b/public/index.html
@@ -249,7 +249,7 @@
 										<ul>
 											<!-- about -->
 											<li>
-												<a href="comingsoon.html" style="font-size: 13px;">Inter</a>
+												<a href="formation-inter-sousse.html" style="font-size: 13px;">Inter</a>
 												<ul>
 													<li>
 														<a href="comingsoon.html" style="font-size: 13px;">Achats - Vente</a>
@@ -290,7 +290,7 @@
 												</ul>
 											</li>
 											<li>
-												<a href="comingsoon.html" style="font-size: 13px;">Intra</a>
+												<a href="formation-intra-sousse.html" style="font-size: 13px;">Intra</a>
 												<ul>
 													<li>
 														<a href="comingsoon.html" style="font-size: 13px;">Achats - Vente</a>
