--- a/public/formation-inter2.html
+++ b/public/formation-inter2.html
@@ -410,13 +410,13 @@
                       <div class="col-md-5">
                         <div>
                           <a href="comingsoon.html">
-                            <img src="images/gallery/formation.jpg" alt="">
+                            <img src="images/gallery/formation-entreprise-tunisie.jpg" alt="">
                           </a>
                         </div>
                       </div>
                       <div class="col-md-7">
                         <h3>
-                          <a href="comingsoon.html">Maitrise globale de la fonction achats et ventes </a>
+                          <a href="comingsoon.html">LES OUTILS DU CONTROLE DE GESTION – CYCLE ACCELERE</a>
                         </h3>
 
                         <div class="star-rating" title="Rated 4.50 out of 5">
@@ -424,8 +424,8 @@
 															<strong class="rating">4.50</strong> out of 5
 														</span>
                         </div>
-							<h4>FORMATION ACHATS-VENTE Tunis,Sousse</h4>
-                        <a href="formation-achats.html" rel="nofollow"
+							<h4>FORMATION MARKETING Tunis,Sousse</h4>
+                        <a href="formation-marketing.html" rel="nofollow"
                            class="theme_button inverse add_to_cart_button">
                           <i class="rt-icon2-plus"></i>
                          Voir Plus
@@ -440,14 +440,14 @@
                     <div class="row">
                       <div class="col-md-5">
                         <div>
-                          <a href="formation-bureautique.html">
-                            <img src="images/gallery/officce.jpg" alt="">
+                          <a href="comingsoon.html">
+                            <img src="images/gallery/formation-sage100-tunis.jpg" alt="">
                           </a>
                         </div>
                       </div>
                       <div class="col-md-7">
                         <h3>
-                          <a href="comingsoon.html">Initiation à l'informatique(windows,Excel,Powerpoint..)</a>
+                          <a href="comingsoon.html">Utilisateur expert en logiciels de comptabilité</a>
                         </h3>
 
                         <div class="star-rating" title="Rated 4.50 out of 5">
@@ -471,14 +471,14 @@
                     <div class="row">
                       <div class="col-md-5">
                         <div>
-                          <a href="formation-compta.html">
+                          <a href="comingsoon.html">
                             <img src="images/gallery/formation-fiscalite-tunis.jpg" alt="">
                           </a>
                         </div>
                       </div>
                       <div class="col-md-7">
                         <h3>
-                          <a href="comingsoon.html">Une maîtrise des concepts financiers de base, </a>
+                          <a href="comingsoon.html">Une maîtrise approfondie de tous les aspects de la fiscalité tunisienne</a>
                         </h3>
 
                         <div class="star-rating" title="Rated 4.50 out of 5">
@@ -502,15 +502,14 @@
                     <div class="row">
                       <div class="col-md-5">
                         <div>
-                          <a href="formation-logistique.html">
-                            <img src="images/gallery/log.jpeg" alt="">
+                          <a href="comingsoon.html">
+                            <img src="images/gallery/formation-Excel-sousse.jpg" alt="">
                           </a>
                         </div>
                       </div>
                       <div class="col-md-7">
                         <h3>
-                          <a href="comingsoon.html">Maîtrise de la domaine de la logistique et des transports</a>
-                          
+                          <a href="comingsoon.html">programme de formation excel tous les niveaux</a>
                         </h3>
 
                         <div class="star-rating" title="Rated 4.50 out of 5">
@@ -534,14 +533,14 @@
                     <div class="row">
                       <div class="col-md-5">
                         <div>
-                          <a href="formation-management.html">
-                            <img src="images/gallery/gmnt.jpeg" alt="">
+                          <a href="comingsoon.html">
+                            <img src="images/gallery/formation-Photoshop-sousse.jpg" alt="">
                           </a>
                         </div>
                       </div>
                       <div class="col-md-7">
                         <h3>
-                          <a href="comingsoon.html">Développent des bases du management</a>
+                          <a href="comingsoon.html">Programme de formation pack adobe tous les niveaux</a>
                         </h3>
 
                         <div class="star-rating" title="Rated 4.50 out of 5">
@@ -608,7 +607,7 @@
                     <a href="#">1</a>
                   </li>
                   <li>
-                    <a href="formation-inter2.html">2</a>
+                    <a href="#">2</a>
                   </li>
                   <li>
                     <a href="#">3</a>
