--- a/public/index.html
+++ b/public/index.html
@@ -252,40 +252,40 @@
 												<a href="formation-inter-sousse.html" style="font-size: 13px;">Inter</a>
 												<ul>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Achats - Vente</a>
+														<a href="formation-achats.html" style="font-size: 13px;">Achats - Vente</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Bureautique</a>
+														<a href="formation-bureautique.html" style="font-size: 13px;">Bureautique</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Comptabilité gestion</a>
+														<a href="formation-compta.html" style="font-size: 13px;">Comptabilité gestion</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Logistique - Transport</a>
+														<a href="formation-logistique.html" style="font-size: 13px;">Logistique - Transport</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Management</a>
+														<a href="formation-management.html" style="font-size: 13px;">Management</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Informatique</a>
+														<a href="formation-info.html" style="font-size: 13px;">Informatique</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Marketing</a>
+														<a href="formation-marketing.html" style="font-size: 13px;">Marketing</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Qualité</a>
+														<a href="formation-qualitè.html" style="font-size: 13px;">Qualité</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Ressources humaines</a>
+														<a href="formatin-RH.html" style="font-size: 13px;">Ressources humaines</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Santé et sécurité au travail</a>
+														<a href="formation-secutravail.html" style="font-size: 13px;">Santé et sécurité au travail</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Développement personnel</a>
+														<a href="formation-DP.html" style="font-size: 13px;">Développement personnel</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Organisation - Audit</a>
+														<a href="formtion-audit.html" style="font-size: 13px;">Organisation - Audit</a>
 													</li>
 												</ul>
 											</li>
@@ -293,37 +293,37 @@
 												<a href="formation-intra-sousse.html" style="font-size: 13px;">Intra</a>
 												<ul>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Achats - Vente</a>
+														<a href="formation-achats.html" style="font-size: 13px;">Achats - Vente</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Bureautique</a>
+														<a href="formation-bureautique.html" style="font-size: 13px;">Bureautique</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Comptabilité gestion</a>
+														<a href="formation-compta.html" style="font-size: 13px;">Comptabilité gestion</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Logistique - Transport</a>
+														<a href="formation-logistique.html" style="font-size: 13px;">Logistique - Transport</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Management</a>
+														<a href="formation-management.html" style="font-size: 13px;">Management</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Informatique</a>
+														<a href="formation-info.html" style="font-size: 13px;">Informatique</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Marketing</a>
+														<a href="formation-marketing.htm" style="font-size: 13px;">Marketing</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Qualité</a>
+														<a href="formation-qualitè.html" style="font-size: 13px;">Qualité</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Ressources humaines</a>
+														<a href="formatin-RH.html" style="font-size: 13px;">Ressources humaines</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Santé et sécurité au travail</a>
+														<a href="formation-secutravail.html" style="font-size: 13px;">Santé et sécurité au travail</a>
 													</li>
 													<li>
-														<a href="comingsoon.html" style="font-size: 13px;">Organisation - Audit</a>
+														<a href="formtion-audit.html" style="font-size: 13px;">Organisation - Audit</a>
 													</li>
 												</ul>
 											</li>
